# Hrifa

./: .gitignore  Design Philosophy.md  Design Philosophy.md.bkp  Hrifa Edel UI Behavior.md  README.md  applets.js  index.html  portal.css
affine-focus-transform-explorer/: Affine Focus Transform.md  affine-focus-transform-explorer-codex-spec-updated.md  app.js  fonts.css  index.html  pknets_groupoids.tex  styles.css
color-checker/: app.js  color-names.js  gruvbox 42 with names.txt  gruvbox-extended.txt  gruvbox-tokens.css  index.html  style.css
custom-reader/: app.js  build.js  feed-data.json  index.html  package-lock.json  package.json  serve.js  sources.json  style.css
design-tokens/: README.md  build.bat  color-tokens.json  config.js  package-lock.json  package.json
gmail-analysis/: .gitignore  README.md  Spec.md  pyproject.toml  requirements.txt
gmail-analysis/src/mail_archive_analytics/: __init__.py  aggregation.py  classification.py  cli.py  config.py  discovery.py  exports.py  parser.py  report.py  web.py
gmail-analysis/tests/: test_pipeline.py
grid-traversal/: README.md  app.js  index.html  inline-edit.css  style.css
hrifa-edel/: README.md  app.js  app.js.bkp  index.html  style.css  style.css.bkp
lines-and-marks/: hatch_regions.js  index.html  inkline_app.js  styles.css
palette-chroma/: app.js  index.html  style.css
polygon-annulus-explorer/: app.js  core.js  index.html  style.css  worker.js
polygon-focus-vantage/: app.js  focus_vantage_radial_constructor_full_handoff.md  focus_vantage_radial_constructor_sidebar_status (1).html  index.html  (+1 more)
(+24 files in other folders)
