[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-archive-analytics"
version = "0.1.0"
description = "Private, offline Gmail Takeout MBOX analytics"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "pyarrow>=14.0", "PyYAML>=6.0", "tldextract>=5.0", "Flask>=3.0"]

[project.scripts]
mail-analytics = "mail_archive_analytics.cli:main"
mail-analytics-web = "mail_archive_analytics.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
